# secrets-cli

./: .gitignore  .secretsignore.example  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/secrets_cli/: baseline.py  cli.py  entropy.py  ignore.py  patterns.py  reporter.py  scanner.py
src/secrets_cli/hooks/: precommit.py
tests/: test_baseline.py  test_entropy.py  test_history.py  test_ignore.py  test_patterns.py  test_scanner.py
