[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secrets-cli"
version = "0.1.0"
description = "Scan for hardcoded secrets before they reach your repository"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mika", email = "miksupetsku@gmail.com" }]
requires-python = ">=3.12"
dependencies = []  # zero runtime deps — stdlib only
keywords = ["security", "secrets", "devsecops", "pre-commit", "sast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/Mhacker1020/secrets-cli"
Repository = "https://github.com/Mhacker1020/secrets-cli"
Issues = "https://github.com/Mhacker1020/secrets-cli/issues"

[project.scripts]
secrets = "secrets_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["src/secrets_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
